// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextContainer with data should render correctly 1`] = `
<React.Fragment>
  <Text
    paragraphOverride={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "StyledParagraph-sc-1nrvocj-0",
          "isStatic": true,
          "rules": Array [
            "color:",
            "#404040",
            ";font-family:",
            "ReithSansNewsRegular, Helvetica, Arial, sans-serif",
            ";padding-bottom:",
            "1rem",
            ";margin:0;",
            "font-size:0.9375em;line-height:1.25rem;",
            "@media (min-width: 20em)",
            "{font-size:1em;line-height:1.375rem;}",
            ";",
          ],
        },
        "displayName": "StyledParagraph",
        "render": [Function],
        "styledComponentId": "StyledParagraph-sc-1nrvocj-0",
        "target": "p",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    text="This is a 1st paragraph block."
  />
  <Text
    paragraphOverride={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "StyledParagraph-sc-1nrvocj-0",
          "isStatic": true,
          "rules": Array [
            "color:",
            "#404040",
            ";font-family:",
            "ReithSansNewsRegular, Helvetica, Arial, sans-serif",
            ";padding-bottom:",
            "1rem",
            ";margin:0;",
            "font-size:0.9375em;line-height:1.25rem;",
            "@media (min-width: 20em)",
            "{font-size:1em;line-height:1.375rem;}",
            ";",
          ],
        },
        "displayName": "StyledParagraph",
        "render": [Function],
        "styledComponentId": "StyledParagraph-sc-1nrvocj-0",
        "target": "p",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    text="This is a 2nd paragraph block."
  />
  <Text
    paragraphOverride={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "StyledParagraph-sc-1nrvocj-0",
          "isStatic": true,
          "rules": Array [
            "color:",
            "#404040",
            ";font-family:",
            "ReithSansNewsRegular, Helvetica, Arial, sans-serif",
            ";padding-bottom:",
            "1rem",
            ";margin:0;",
            "font-size:0.9375em;line-height:1.25rem;",
            "@media (min-width: 20em)",
            "{font-size:1em;line-height:1.375rem;}",
            ";",
          ],
        },
        "displayName": "StyledParagraph",
        "render": [Function],
        "styledComponentId": "StyledParagraph-sc-1nrvocj-0",
        "target": "p",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    text="This is a 3rd paragraph block."
  />
  <Text
    paragraphOverride={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "StyledParagraph-sc-1nrvocj-0",
          "isStatic": true,
          "rules": Array [
            "color:",
            "#404040",
            ";font-family:",
            "ReithSansNewsRegular, Helvetica, Arial, sans-serif",
            ";padding-bottom:",
            "1rem",
            ";margin:0;",
            "font-size:0.9375em;line-height:1.25rem;",
            "@media (min-width: 20em)",
            "{font-size:1em;line-height:1.375rem;}",
            ";",
          ],
        },
        "displayName": "StyledParagraph",
        "render": [Function],
        "styledComponentId": "StyledParagraph-sc-1nrvocj-0",
        "target": "p",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    text="This is a 4th paragraph block.."
  />
  <Text
    paragraphOverride={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "StyledParagraph-sc-1nrvocj-0",
          "isStatic": true,
          "rules": Array [
            "color:",
            "#404040",
            ";font-family:",
            "ReithSansNewsRegular, Helvetica, Arial, sans-serif",
            ";padding-bottom:",
            "1rem",
            ";margin:0;",
            "font-size:0.9375em;line-height:1.25rem;",
            "@media (min-width: 20em)",
            "{font-size:1em;line-height:1.375rem;}",
            ";",
          ],
        },
        "displayName": "StyledParagraph",
        "render": [Function],
        "styledComponentId": "StyledParagraph-sc-1nrvocj-0",
        "target": "p",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    text="This is a 5th paragraph block."
  />
</React.Fragment>
`;

exports[`TextContainer with data with a passed previous block type should render correctly 1`] = `
<React.Fragment>
  <hr />
  <Text
    paragraphOverride={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "StyledParagraph-sc-1nrvocj-0",
          "isStatic": true,
          "rules": Array [
            "color:",
            "#404040",
            ";font-family:",
            "ReithSansNewsRegular, Helvetica, Arial, sans-serif",
            ";padding-bottom:",
            "1rem",
            ";margin:0;",
            "font-size:0.9375em;line-height:1.25rem;",
            "@media (min-width: 20em)",
            "{font-size:1em;line-height:1.375rem;}",
            ";",
          ],
        },
        "displayName": "StyledParagraph",
        "render": [Function],
        "styledComponentId": "StyledParagraph-sc-1nrvocj-0",
        "target": "p",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    text="This is a 1st paragraph block."
  />
  <Text
    paragraphOverride={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "StyledParagraph-sc-1nrvocj-0",
          "isStatic": true,
          "rules": Array [
            "color:",
            "#404040",
            ";font-family:",
            "ReithSansNewsRegular, Helvetica, Arial, sans-serif",
            ";padding-bottom:",
            "1rem",
            ";margin:0;",
            "font-size:0.9375em;line-height:1.25rem;",
            "@media (min-width: 20em)",
            "{font-size:1em;line-height:1.375rem;}",
            ";",
          ],
        },
        "displayName": "StyledParagraph",
        "render": [Function],
        "styledComponentId": "StyledParagraph-sc-1nrvocj-0",
        "target": "p",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    text="This is a 2nd paragraph block."
  />
  <Text
    paragraphOverride={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "StyledParagraph-sc-1nrvocj-0",
          "isStatic": true,
          "rules": Array [
            "color:",
            "#404040",
            ";font-family:",
            "ReithSansNewsRegular, Helvetica, Arial, sans-serif",
            ";padding-bottom:",
            "1rem",
            ";margin:0;",
            "font-size:0.9375em;line-height:1.25rem;",
            "@media (min-width: 20em)",
            "{font-size:1em;line-height:1.375rem;}",
            ";",
          ],
        },
        "displayName": "StyledParagraph",
        "render": [Function],
        "styledComponentId": "StyledParagraph-sc-1nrvocj-0",
        "target": "p",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    text="This is a 3rd paragraph block."
  />
  <Text
    paragraphOverride={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "StyledParagraph-sc-1nrvocj-0",
          "isStatic": true,
          "rules": Array [
            "color:",
            "#404040",
            ";font-family:",
            "ReithSansNewsRegular, Helvetica, Arial, sans-serif",
            ";padding-bottom:",
            "1rem",
            ";margin:0;",
            "font-size:0.9375em;line-height:1.25rem;",
            "@media (min-width: 20em)",
            "{font-size:1em;line-height:1.375rem;}",
            ";",
          ],
        },
        "displayName": "StyledParagraph",
        "render": [Function],
        "styledComponentId": "StyledParagraph-sc-1nrvocj-0",
        "target": "p",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    text="This is a 4th paragraph block.."
  />
  <Text
    paragraphOverride={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "StyledParagraph-sc-1nrvocj-0",
          "isStatic": true,
          "rules": Array [
            "color:",
            "#404040",
            ";font-family:",
            "ReithSansNewsRegular, Helvetica, Arial, sans-serif",
            ";padding-bottom:",
            "1rem",
            ";margin:0;",
            "font-size:0.9375em;line-height:1.25rem;",
            "@media (min-width: 20em)",
            "{font-size:1em;line-height:1.375rem;}",
            ";",
          ],
        },
        "displayName": "StyledParagraph",
        "render": [Function],
        "styledComponentId": "StyledParagraph-sc-1nrvocj-0",
        "target": "p",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    text="This is a 5th paragraph block."
  />
</React.Fragment>
`;
